--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <li>Baking</li>
     <li>Playing games</li>
   </ul>
-  <a href="https://github.com/moni-nancy" target="_blank">You can reach me through my github</a>
+  <p>You can reach me:</p>
+  <a href="https://github.com/moni-nancy" target="_blank">Github</a>
+  <a href="https://twitter.com/Nancy_Olatuja">Twitter</a>
 </body>
 </html>
