--- a/index.html
+++ b/index.html
@@ -4,22 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Page</title>
+  <title>Title goes here</title>
 </head>
 <body>
-  <h1>My First HTML Page</h1>
-  <p>My name is Nancy, I'm 21 years old</p>
-  <p>A software developement student of Stutern</p>
-  <p>Currently studying Home Science and Management </p>
-  <h3>My Hobbies are:</h3>
-  <ul>
-    <li>Watching horror movies</li>
-    <li>Cooking</li>
-    <li>Baking</li>
-    <li>Playing games</li>
-  </ul>
-  <p>You can reach me:</p>
-  <a href="https://github.com/moni-nancy" target="_blank">Github</a>
-  <a href="https://twitter.com/Nancy_Olatuja">Twitter</a>
+  
+  
 </body>
 </html>
